<resources>
    <string name="app_name">Task_Timer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_name">Task Name</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="add_task">Add Task</string>
</resources>